<resources>
    <string name="app_name">RTO Exam Driving Theory</string>

    <string name="next_question">Next Question</string>
    <string name="complete_0">Complete 0%</string>
    <string name="question_image">Question Image</string>
    <string name="question_title">Question Title</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="select_a_category_below">Select A Category Below</string>
    <string name="select_a_category_below_second">Select A Category Below</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_hazard_clip">HazardClipActivity</string>
    <string name="title_activity_hazard_perception">HazardPerceptionActivity</string>
    <string name="title_activity_more_info">Contact Us</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_select_question">SelectQuestionActivity</string>
    <string name="title_activity_shop">Full Version</string>
    <string name="loading_questions">Loading Questions…</string>
    <string name="mock_test">Mock Test</string>
    <string name="explanation">Explanation</string>
    <string name="explanation_info">Explanation Info</string>
    <string name="hazard_perception">Hazard Perception</string>
    <string name="hazard_perceptionTest">Hazard Perception Test</string>
    <string name="hazard_perceptionClipTest">Hazard Perception Clip Test</string>
    <string name="action_settings">Setting</string>
    <string name="dvsa_question">DVSA Question</string>
    <string name="mock_test_practice">Mock Test Practice</string>
    <string name="end_test">End Test</string>
    <string name="select_cat">Theory Test Question by Category</string>
    <string name="highwayCode">Highway Code</string>
    <string name="text_ok">Ok</string>
    <string name="trafficAndRoadSignal">Traffic &amp; Road Sign</string>
    <string name="clip_guide">Please practice until end video to view explanation and your score. When you see a hazard developing click anywhere on the video clip.</string>
    <string name="clipRespondError">You responded to this clip in an unacceptable manner.Please avoid a series of rapid clicks or double clicks.You will score 0 for this clip.</string>
    <string name="text_cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="scoreStringFront">You have scored </string>
    <string name="scoreStringEnd"> points out of a possible 5.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="checkInternetConnection">Please check internet connection!!!</string>
    <string name="mustget86front">You must get 86% </string>
    <string name="outOf"> out of </string>
    <string name="toPasstheTest">to pass the test</string>
    <string name="pass">Pass </string>
    <string name="gettingData">Getting Data..</string>
    <string name="endTest">End Test</string>
    <string name="doYouWantToEndTest">Do you want to end test?</string>
    <string name="exit">Exit</string>
    <string name="noQueFound">No Questions Found</string>
    <string name="question">Question </string>
    <string name="of"> of </string>
    <string name="title_theoryTestCarDrivers">Theory Test Car Drivers</string>
    <string name="title_free_hazard_test">Hazard Perception Test</string>
    <string name="title_free_hazard_test_1">Free Hazard Perception Test 1</string>
    <string name="title_free_hazard_test_2">Free Hazard Perception Test 2</string>
    <string name="title_free_hazard_test_3">Free Hazard Perception Test 3</string>
    <string name="title_free_hazard_test_4">Free Hazard Perception Test 4</string>
    <string name="title_purchase_hazard_test_title">Hazard Perception Test Full-Length Mock Tests (Purchase)</string>
    <string name="full_cgi_test_1">Full CGI Hazard Perception Test 1</string>
    <string name="full_cgi_test_2">Full CGI Hazard Perception Test 2</string>
    <string name="full_cgi_test_3">Full CGI Hazard Perception Test 3</string>
    <string name="full_cgi_test_4">Full CGI Hazard Perception Test 4</string>
    <string name="full_cgi_test_5">Full CGI Hazard Perception Test 5</string>
    <string name="full_cgi_test_6">Full CGI Hazard Perception Test 6</string>
    <string name="hazard_test_description">The sign warned you of the road becoming narrow  up ahead. A car drives through the rail underpass ahead with further traffic following behind by the bend in the road, which becomes a hazard as the road narrows.  You slow down and let the car pass through the underpass.</string>
    <string name="you_scored">You Scored </string>
    <string name="clickToStart">Click to Start</string>
    <string name="hazard_perception_start_guide_des">When you see a hazard developing click anywhere on the video clip</string>
    <string name="hazardPauseSwitchDes">Pause 5,4,3,2,1</string>
    <string name="scoreWindow">Score window</string>
    <string name="takeTestAgain">Take this test again.</string>
    <string name="Que1Of50">Question 1 of 50</string>
    <string name="main_top_title">Your destination is reward for safe driving.</string>
    <string name="highwayCodeRandom">highway code random</string>
    <string name="viewDetail">View Detail >></string>
    <string name="signDialogContent">The Premier Resource for Passing the 2020 Driving Theory Test</string>
    <string name="quizTitle">Quiz Title</string>
    <string name="title_alertness">Alertness</string>
    <string name="category_pass_content">Pass 24/28</string>
    <string name="exit_test">Exit Test</string>
    <string name="title_free_theory_test_practical">Free theory\ntest practice</string>
    <string name="title_que_by_cat">Question\nby category</string>
    <string name="title_hazard_perception">Hazard\nperception</string>
    <string name="title_highway_code">Highway\ncode</string>
    <string name="title_traffic_road_signs">Traffic &amp;\nroad signs</string>


    <string name="privacy">PRIVACY POLICY LINK</string>
    <string name="appLink">APPLICATION LINK</string>
    <string name="cd_back_button">Back Button</string>
    <string name="cd_refresh_data_button">Refresh Data Button</string>
    <string name="cd_play_video_button">Play Video Button</string>

</resources>