<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_view"
        android:minWidth="@dimen/_300sdp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/end_test"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/clipRespondError"
            android:textColor="@color/color_text_item_setting"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rey.material.widget.FrameLayout
                android:id="@+id/btn_cancel"
                style="@style/ripple_btn_tab_widget_light"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/bg_button_ok"
                android:minWidth="@dimen/_100sdp">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </com.rey.material.widget.FrameLayout>

            <com.rey.material.widget.FrameLayout
                android:id="@+id/btn_ok"
                style="@style/ripple_btn_tab_widget_light"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_button_ok"
                android:minWidth="@dimen/_100sdp">

                <TextView
                    android:id="@+id/tv_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_ok"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </com.rey.material.widget.FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>