<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/exit_test"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/btnNegative"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="2.25"
                android:background="@drawable/btn_bg_round_corner_transparent"
                android:gravity="center"
                android:text="@string/text_cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/btnPositive"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="2.25"
                android:background="@drawable/btn_bg_round_corner_green_solid"
                android:gravity="center"
                android:text="@string/text_ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>